--- a/assets/sass/_layout.scss
+++ b/assets/sass/_layout.scss
@@ -26,6 +26,7 @@
 .main-content-sidebar-inner {
     display: flex;
     flex-wrap: wrap;
+    width: 100%;
 }
 
 @media(min-width: 767px) {
